--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "core-js": "^3.8.3",
     "register-service-worker": "^1.7.2",
-    "vue": "^3.2.13",
+    "vue": "^3.5.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
